Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ git pull</pre></div>
 <h4>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h4>
 
-<p>Mary Collins (@dmbcolli), Tom Hobbs (<a href="https://github.com/nthobbs50" class="user-mention">@nthobbs50</a>), and Christian Che-Castaldo (<a href="https://github.com/CCheCastaldo" class="user-mention">@CCheCastaldo</a>) are responsible for the materials on this website. </p>
+<p>Mary Collins (<a href="https://github.com/mbcolli" class="user-mention">@mbcolli</a>), Tom Hobbs (<a href="https://github.com/nthobbs50" class="user-mention">@nthobbs50</a>), and Christian Che-Castaldo (<a href="https://github.com/CCheCastaldo" class="user-mention">@CCheCastaldo</a>) are responsible for the materials on this website. </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/CCheCastaldo/SESYNCBayes">SESYNCBayes</a> is maintained by <a href="https://github.com/CCheCastaldo">CCheCastaldo</a>.</span>
