--- a/Labs/Probability/ProbabilityExercise.html
+++ b/Labs/Probability/ProbabilityExercise.html
@@ -544,7 +544,7 @@ z \sim  \textrm{lognormal}\big(\alpha,\beta\big)\\[1em]
 </ol>
 <p><br></p>
 <ol start="12" style="list-style-type: decimal">
-<li>Existing literature shows that the proportion of habitat patches containing at least one rare plant individual is <span class="math inline">\(\mu = 0.04\)</span> with a standard deviation <span class="math inline">\(\big(\sigma\big)\)</span> of 0.01. Write out a model for the distribution of <span class="math inline">\(\phi\)</span>, conditional on <span class="math inline">\(\mu\)</span> and <span class="math inline">\(\sigma\)</span>.</li>
+<li>Existing literature shows that the probability a habitat patch is occupied by a rare plant (which we define as <span class="math inline">\(\phi\)</span>) has a mean of <span class="math inline">\(\mu = 0.04\)</span> with a standard deviation of <span class="math inline">\(\sigma = .01\)</span>. Write out a model for the distribution of <span class="math inline">\(\phi\)</span>, conditional on <span class="math inline">\(\mu\)</span> and <span class="math inline">\(\sigma\)</span>.</li>
 </ol>
 <div class="hider">
 <p><span class="math display">\[
@@ -561,18 +561,18 @@ z \sim  \textrm{lognormal}\big(\alpha,\beta\big)\\[1em]
 </ol>
 <p><br></p>
 <ol start="14" style="list-style-type: decimal">
-<li>If you visited 50 patches, what is the probability that 5 would be occupied, conditional on the stated hypothesis <span class="math inline">\(\big(\phi=0.04\big)\)</span>?</li>
+<li>If you visited 50 patches, what is the probability that 5 would be occupied, conditional on the hypothesis that <span class="math inline">\(\phi=0.04\)</span>?</li>
 </ol>
 <div class="hider">
 <p><span class="math display">\[\Pr(y=5 \mid \phi, n=50) = \textrm{binomial}\big(y=5\mid \phi=0.04,n=50\big) =\binom{50}{5}0.04^5(1-0.04)^{50-5}\]</span></p>
 </div>
 <p><br></p>
 <ol start="15" style="list-style-type: decimal">
-<li>Plot the probability of the data for y = 1…10 occupied patches out of 50 patches visited conditional on the stated hypothesis <span class="math inline">\(\big(\phi=0.04\big)\)</span>.</li>
+<li>Plot the probability of the data for y = 1…10 occupied patches out of 50 patches visited conditional on the that hypothesis <span class="math inline">\(\phi=0.04\)</span>.</li>
 </ol>
 <p><br></p>
 <ol start="16" style="list-style-type: decimal">
-<li>What is the probability that at least 5 are occupied, conditional on the stated hypothesis (<span class="math inline">\(\phi=0.04\)</span>)?</li>
+<li>What is the probability that at least 5 are occupied, conditional on the hypothesis that <span class="math inline">\(\phi=0.04\)</span>?</li>
 </ol>
 <div class="hider">
 \begin{eqnarray}
@@ -582,7 +582,7 @@ z \sim  \textrm{lognormal}\big(\alpha,\beta\big)\\[1em]
 </div>
 <p><br></p>
 <ol start="17" style="list-style-type: decimal">
-<li>Plot the cumulative probability that at least y = 1…10 patches are occupied, conditional on the stated hypothesis (<span class="math inline">\(\phi=0.04\)</span>)?</li>
+<li>Plot the cumulative probability that at least y = 1…10 patches are occupied, conditional on the hypothesis that <span class="math inline">\(\phi=0.04\)</span>?</li>
 </ol>
 <p><br></p>
 <ol start="18" style="list-style-type: decimal">
