--- a/Labs/HemlockLightExample/HemlockLightExample.html
+++ b/Labs/HemlockLightExample/HemlockLightExample.html
@@ -164,7 +164,8 @@ MathJax.Hub.Config({
 </div>
 <div id="ii.-problem" class="section level4">
 <h4>II. Problem</h4>
-<p>Coates and Burton (1999) studied the influence of light availability on growth rate of species of conifers in northwestern interior cedar-hemlock forests of British Columbia. They used the model, <span class="math display">\[\mu_{i}=\frac{\alpha\big(L_{i}-c\big)}{\frac{\alpha}{\gamma}\big(L_{i}-c\big)},\]</span></p>
+<p>Coates and Burton (1999) studied the influence of light availability on growth rate of species of conifers in northwestern interior cedar-hemlock forests of British Columbia. They used the model,</p>
+<p><span class="math display">\[\mu_{i}=\cfrac{\alpha\big(L_{i}-c\big)}{\cfrac{\alpha}{\gamma} + \big(L_{i}-c\big)},\]</span></p>
 <p>where:</p>
 <p><span class="math inline">\(\mu_{i}\)</span> = prediction of growth rate of <span class="math inline">\(i_{th}\)</span> hemlock tree (cm/year)</p>
 <p><span class="math inline">\(\alpha\)</span> = maximum growth rate (cm/year)</p>
