--- a/Labs/HemlockLightExample/HemlockLightExample.html
+++ b/Labs/HemlockLightExample/HemlockLightExample.html
@@ -194,7 +194,7 @@ MathJax.Hub.Config({
 <p><br></p>
 <p>Answer the following questions before proceeding.</p>
 <ol style="list-style-type: decimal">
-<li><p>What is the relationship between the formula in column E and the normal likelihood function (equation 2)?</p></li>
+<li><p>What is the relationship between the formula in column E and the normal likelihood function?</p></li>
 <li><p>Describe the correspondence between <span class="math inline">\(y_{i}\)</span>, <span class="math inline">\(\mu_{i}\)</span>, and <span class="math inline">\(\sigma\)</span> in equation 2 and the columns and cells in your spreadsheet.</p></li>
 <li><p>What is the reason for the argument “FALSE” in the Excel formula in column E?</p></li>
 <li><p>What does the function return when that argument is “TRUE”?</p></li>
