Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">SESYNCBayes</h1>
-      <h2 class="project-tagline">Course materials for the SESYNC Bayesian modeling for ecologists and social scientists short course.</h2>
+      <h2 class="project-tagline">Course materials for the SESYNC Bayesian modeling short course.</h2>
       <a href="https://github.com/CCheCastaldo/SESYNCBayes" class="btn">View on GitHub</a>
       <a href="https://github.com/CCheCastaldo/SESYNCBayes/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/CCheCastaldo/SESYNCBayes/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <p>Welcome to the SESYNC Bayesian modeling course being held August 1-10 2016 at the National Socio-Environmental Synthesis Center (<a href="https://www.sesync.org">SESYNC</a>) in Annapolis, MD.</p>
+      <p>Welcome to the SESYNC Bayesian modeling course being held August 1-10, 2016 at the National Socio-Environmental Synthesis Center (<a href="https://www.sesync.org">SESYNC</a>) in Annapolis, MD.</p>
 
 <h4>
 <a id="i-motivation" class="anchor" href="#i-motivation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>I. Motivation</h4>
