small edit to q 1

--- a/Labs/HemlockLightExample/HemlockLightExample.html
+++ b/Labs/HemlockLightExample/HemlockLightExample.html
@@ -135,8 +135,8 @@ MathJax.Hub.Config({
 <div id="estimating-model-parameters-using-maximum-likelihood" class="section level4">
 <h4>Estimating Model Parameters Using Maximum Likelihood</h4>
 </div>
-<div id="august-02-2016" class="section level4">
-<h4>August 02, 2016</h4>
+<div id="august-03-2016" class="section level4">
+<h4>August 03, 2016</h4>
 <hr />
 </div>
 <div id="table-of-contents" class="section level4">
@@ -201,7 +201,7 @@ MathJax.Hub.Config({
 <p><br></p>
 <p>Answer the following questions before proceeding.</p>
 <ol style="list-style-type: decimal">
-<li><p>Why aren’t the values we provided, <span class="math inline">\([1,1,1,2]\)</span>, very good initial values for finding the MLE for these parameters? How could you improve them?</p></li>
+<li><p>Why aren’t the values we provided, <span class="math inline">\([1,1,1,2]\)</span>, very good initial values for finding the MLE for these parameters using Solver? (Hint: Solver uses a grid search algorithm to accomplish this.) How could you improve them?</p></li>
 <li><p>Adjust the values for <span class="math inline">\(\alpha\)</span>, <span class="math inline">\(\gamma\)</span>, and <span class="math inline">\(c\)</span> until you get predictions that look reasonable in your plot. How could we get a better initial value for <span class="math inline">\(\sigma\)</span>?</p></li>
 <li><p>What is the relationship between the formula in column E and the normal likelihood function in equation 2?</p></li>
 </ol>
