fixed typo in q 16 - thanks kyle

--- a/Labs/Probability/ProbabilityExercise.html
+++ b/Labs/Probability/ProbabilityExercise.html
@@ -135,8 +135,8 @@ $(document).ready(function () {
 <div id="probability-lab" class="section level4">
 <h4>Probability Lab</h4>
 </div>
-<div id="august-02-2016" class="section level4">
-<h4>August 02, 2016</h4>
+<div id="august-03-2016" class="section level4">
+<h4>August 03, 2016</h4>
 <hr />
 </div>
 <div id="table-of-contents" class="section level4">
@@ -577,7 +577,7 @@ z \sim  \textrm{lognormal}\big(\alpha,\beta\big)\\[1em]
 <div class="hider">
 \begin{eqnarray}
 \Pr\big(y \geq5 \mid \phi, n=50\big) &amp; = &amp; \textrm{binomial}\big(y \geq5 \mid \phi=0.04,n=50\big)\\[1em]
-&amp;= &amp;\sum_{y_{i}\in(5,6,\ldots,50)}\binom{50}{5}\big(0.04\big)^{\,y_{i}}\big(1-0.04\big)^{50-y_{i}}\\[1em]
+&amp;= &amp;\sum_{y_{i}\in(5,6,\ldots,50)}\binom{50}{y_{i}}\big(0.04\big)^{\,y_{i}}\big(1-0.04\big)^{50-y_{i}}\\[1em]
 \end{eqnarray}
 </div>
 <p><br></p>
