edited git pull when local changes made

--- a/Admin/AccessCourseMaterials.html
+++ b/Admin/AccessCourseMaterials.html
@@ -124,8 +124,8 @@ $(document).ready(function () {
 <div id="course-set-up" class="section level4">
 <h4>Course Set Up</h4>
 </div>
-<div id="july-31-2016" class="section level4">
-<h4>July 31, 2016</h4>
+<div id="august-03-2016" class="section level4">
+<h4>August 03, 2016</h4>
 <hr />
 </div>
 <div id="table-of-contents" class="section level4">
@@ -195,8 +195,7 @@ cd SESYNCBayes</code></pre></li>
 <ol style="list-style-type: decimal">
 <li><p>You’ll need to open your terminal/bash.</p></li>
 <li><p>Execute the following simple steps one at a time in your terminal/bash:</p>
-<pre class="bash"><code>git stash
-git stash drop
+<pre class="bash"><code>git checkout .
 git pull</code></pre>
 <p><br></p></li>
 </ol>
